src/ui/styles/z_index.css
#panel-main-editor {
    z-index: 0;
}

#panel-top-toolbar {
    z-index: 9;
}

#panel-toolbar {
    z-index: 10;
}

/* Update notification should appear above everything */
#update-notification-panel {
    z-index: 30;
}

/* Above everything else except for panel-aux */
#panel-vis {
    z-index: 19;

    & #serialcanvas {
        z-index: auto;
      }
}


/* .panel-close-button {
    z-index: 1500;
} */

/* .panel-aux.panel-expanded {
    z-index: 1100;
} */

/* .panel-expand-toggle {
    z-index: 1050;
} */

/* .panel-nav-bar {
    z-index: 1000;
}

.doc-tags-container {
    z-index: 350;
}

.doc-copy-button {
    z-index: 5;
} */

